<resources>
    <string name="app_name">Hoppy</string>

    <string name="facebook_app_id">393500181021830</string>

    <string name="main_fragment_title">Welcome to Hoppy</string>
    <string name="nav_brew_steps_title">Brew Steps</string>
    <string name="nav_my_recipes_title">My Recipes</string>
    <string name="nav_inventory_title">Inventory</string>
    <string name="nav_brewing_tools_title">Brewing Tools</string>
    <string name="nav_shopping_list_title">Shopping List</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_logout_title">Logout</string>
    <string name="login_with_google">Entrar com o Google</string>
    <string name="login_with_facebook">Entrar com o facebook</string>
    <string name="loading_text_message">Carregando ...</string>
    <string name="internet_error_message">No internet connection</string>
    <string name="default_error_message">Sorry, an unexpected error occurred.</string>
    <string name="login_with_google_error_message">Error trying to sign in with google</string>
    <string name="anonymous_user_name">Hello stranger...</string>
    <string name="menu_sign_in_action">Sign in</string>
    <string name="login_with_facebook_cancelled_message">Facebook login was cancelled</string>
    <string name="login_with_facebook_error_message">Error trying to sign in with facebook</string>
    <string name="my_recipes_fragment_title">Your Recipes</string>
</resources>
